# cultureflare

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.agex/data/pr/: events.jsonl
.claude/skills/cicd/: SKILL.md
.claude/skills/communicate/: SKILL.md
.claude/skills/cultureflare-write/: SKILL.md
.claude/skills/poll/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/remember/: SKILL.md
.colleague/flight/: a7becefc9210.chat.jsonl
.github/workflows/: publish.yml
cfafi/: __init__.py  __main__.py
cfafi/_remote_login/: __init__.py  _access_app.py  _access_org.py  _access_policy.py  _common.py  _dns.py  _preflight.py  _render.py  _service_token.py  _tunnel.py
cfafi/cli/: __init__.py
cfafi/cli/_commands/: remote_login.py
cultureflare/: __init__.py  _api.py
cultureflare/_remote_login/: __init__.py  _common.py  _render.py  _seal_plan.py
cultureflare/_secrets/: _shushu_sink.py
cultureflare/cli/: __init__.py  _output.py
cultureflare/cli/_commands/: dns.py  explain.py  pages.py  remote_login.py
docs/: SETUP.md
docs/superpowers/plans/: 2026-05-07-cfafi-remote-login.md
tests/: conftest.py  test_api.py  test_back_compat.py  test_cli_pages_deployments_create.py  test_cli_remote_login.py  test_output.py  test_remote_login_access_app.py  test_remote_login_access_org.py  test_remote_login_access_policy.py  test_remote_login_common.py  test_remote_login_dns.py  test_remote_login_orchestrator.py  test_remote_login_preflight.py  test_remote_login_render.py  test_remote_login_seal_plan.py  test_remote_login_service_token.py  test_remote_login_tunnel.py  test_secrets_shushu_integration.py  test_secrets_shushu_sink.py
tests/bats/: cf-dns-delete.bats  cf-pages-deployment-create.bats  cf-pages-domain-remove.bats  cf-redirect-delete.bats
tests/fixtures/: dns_record_delete_ok.json  dns_records_agex_cname.json  pages_deployment_create_ok.json  pages_deployment_create_preview_ok.json  ruleset_detail_culture_dev.json  ruleset_detail_dup_agex.json  ruleset_detail_no_rules.json  ruleset_rule_delete_ok.json  rulesets_culture_dev.json
(+23 files in other folders)
