[project]
name = "cultureflare"
version = "0.13.0"
description = "CloudFlare Agent First Interface — agent-first CLI for CloudFlare management in the AgentCulture org."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Systems Administration",
    "Intended Audience :: Developers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/agentculture/cultureflare"
Issues = "https://github.com/agentculture/cultureflare/issues"

[project.scripts]
cfafi = "cultureflare.cli:main"
cultureflare = "cultureflare.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Both names ship in the wheel: `cultureflare` is the real package
# directory; `cfafi` is a relative symlink in the repo and hatchling
# packages the dereferenced files under the legacy name as well, so
# `import cfafi` keeps working post-install.
packages = ["cultureflare", "cfafi"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "bandit>=1.7.5",
    "pylint>=2.17.0",
    "flake8>=6.1",
    "flake8-bandit>=4.1.1",
    "flake8-bugbear>=23.7.10",
    "coverage>=7.2.0",
    "pre-commit>=3.5.0",
    "isort>=5.12.0",
    "black>=23.7.0",
]

[tool.coverage.run]
source = ["cultureflare"]
omit = ["cultureflare/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["cultureflare"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
